# starlight-osu

./: .gitignore  CMakeLists.txt
docs/: OSU_CONFIG.md
injector/: CMakeLists.txt
injector/src/: aim_assist.cpp  aim_assist.h  arduino_serial.cpp  arduino_serial.h  byovd.cpp  byovd.h  config.cpp  config.h  kernel.cpp  kernel.h  kernel_input.cpp  kernel_input.h  main.cpp  osu_reader.cpp  osu_reader.h  overlay.cpp  overlay.h  physmem.cpp  physmem.h  relax.cpp  relax.h  relax_helper.cpp  relax_ipc.cpp  relax_ipc.h  renderer.cpp  renderer.h  sig_scanner.cpp  sig_scanner.h
shared/: driver_backend.h  ioctl_codes.h
